Fixed .titlebox .tagline positioning issues
Fixed titlebox flair image offset in flair selector (.titlebox .tagline
.flair-graphic:before) by setting left position to -20px
Fixed "Approved Submitter" overlap with flair box (.titlebox .tagline)
by setting margin-top to 0px!important

--- a/YuYuYu.css
+++ b/YuYuYu.css
@@ -179,6 +179,12 @@
         -ms-transform: scale(0.5, 0.5);
         -webkit-transform: scale(0.5, 0.5);
     }
+    .titlebox .tagline {
+        margin-top:0px!important;
+    }
+    .titlebox .tagline > .flair-graphic:before {
+        left:-20px;
+    }
     .flair-yuna-0:before {
         background-position: 0 0;
     }
